# caatuu

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LEGAL_INVENTORY.md  LICENSING.md  PRIVACY.md  PRODUCT_READINESS.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  compose.archive.yaml  compose.phone-debug.yaml  compose.tools.yaml  compose.yaml  env.sh  parse_project.sh  run.sh  temp.txt
apps/animated-fabric/: .dockerignore  .gitignore  AGENTS.md  CODEX_START.md  Dockerfile  Dockerfile.cutout  README.md  README_BUNDLE.md  compose.yaml  pyproject.toml  requirements-cutout-core.txt  requirements-cutout-ml.txt  requirements-cutout-torch-cpu.txt  requirements-cutout-torch-cuda.txt  requirements-reconstruction-bootstrap-lock.txt  requirements-reconstruction-bootstrap.in  requirements-reconstruction-lock.in  requirements-reconstruction-lock.txt  requirements-reconstruction-provision-lock.txt  requirements-reconstruction-provision.txt  requirements-reconstruction-torch.txt  requirements-reconstruction.txt
apps/animated-fabric/constraints/: linux-py312.txt
apps/animated-fabric/containers/blender/: Dockerfile  README.md
apps/animated-fabric/containers/reconstruction/: Dockerfile  README.md  download_pinned_checkpoint.sh  download_pinned_torch.sh  provision_models.sh
apps/animated-fabric/docs/: AF053-DEMO-CC0.md  CUTOUT.md  LEGAL_INVENTORY.md  RECONSTRUCTION_LAB.md  SPEC.md  STATUS.md
apps/animated-fabric/docs/decisions/: 0001-layer-manifest.md  0002-rig-template-resource.md  0003-humanoid-rig-application.md  0004-rig-editing-use-cases.md  0005-animation-clip-normalization.md  (+10 more)
apps/animated-fabric/scripts/: __init__.py  _humanoid_animation_demo.py  generate_actor_package_fixture.py  generate_af022_compositor_golden.py  generate_af052_directional_goldens.py  generate_fixture_assets.py  generate_macaw_actor_package.py  generate_macaw_rig_mapping.py  package_blender_directional_export.py  package_blender_walk_demo.py  prepare_macaw_reference_package.py  run_blender_directional_demo.sh  run_demo_pipeline.py  run_idle_animation_demo.py  run_reconstruction_candidate_review.sh  run_rig_application_demo.py  run_walk_animation_demo.py  verify_blender_actor_neutral.py  verify_blender_directional_goldens.py  verify_macaw_actor_review.py
apps/animated-fabric/tools/: reference_package.py
apps/animated-fabric/workspaces/: README.md
(+819 files in other folders)
