[package]
name = "caatuu-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tower = "0.4"
# Added "fs" so we can serve ./static (ServeDir / ServeFile)
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
