[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "animated-fabric"
version = "0.1.0"
description = "Offline desktop application and library for layered 2D animated actors."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2,<3",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.9,<5",
  "Pillow>=10,<13",
  "PySide6>=6.7,<7",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "platformdirs>=4,<5",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6,<7",
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "pytest-qt>=4.4,<5",
  "ruff>=0.8,<1",
]

[project.scripts]
animated-fabric = "animated_fabric.cli.app:main"
animated-fabric-gui = "animated_fabric.gui.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".tmp"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["animated_fabric"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
  "--cov=animated_fabric",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]
testpaths = ["tests"]
pythonpath = ["."]
qt_api = "pyside6"

[tool.coverage.run]
branch = true
source = ["animated_fabric"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
